# snake-game

./: CMakeLists.txt  README.md
include/: food.h  game.h  input.h  pos.h  renderer.h  snake.h
src/: food.cpp  game.cpp  input.cpp  main.cpp  renderer_sfml.cpp  snake.cpp
